k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-staging
  labels:
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: mern-production
  labels:
    environment: production
